# easy-shape

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: windows-build.yml
src/shape_measure/: __init__.py  cli.py  gui.py
